--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,15 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Danshee / Mysteries
+author: "Daniel Pietsch"
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Various mysteries I find interesting enough to write about.
 baseurl: "/mysteries" # the subpath of your site, e.g. /blog
 url: "https://danshee.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#github_username:  danshee
+#linkedin_username: daniel-pietsch
+twitter_username: danpietsch
 
 # Build settings
 theme: minima
